<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">grabador_sonidos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="grabar">Grabar</string>
    <string name="parar">Parar de grabar</string>
    <string name="play">Play</string>
    <string name="parado">parado</string>
    <string name="grabando">grabando</string>
    <string name="estado">Estado : </string>
    <string name="error_micro">Hay un error con el microfono del movil</string>
    <string name="pitch">pitch : </string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="stop_playing">parar de reproducir</string>
    <string name="eco">Eco</string>
    <string name="reverb">Reverb</string>
    <string name="metal">Metal</string>    
    <string name="chorus">Chorus</string>
    
    
    <string name="helio">1</string>
    <string name="pitufo">2</string>
    <string name="malvado">3</string>
    <string name="fantasma">4</string>

</resources>